Spacing and button for mobile and sizing fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,8 +26,8 @@ body {
 	text-align: left;
 	position: top left;
 	background:#151515;
-	background-image:radial-gradient(ellipse at left top, #232323 0%, rgba(21,21,21,21.1) 55%);
-	background-size:300px;
+	background-image:radial-gradient(ellipse at left top, #212121 30%, rgba(21, 21, 21, 21.1) 65%);
+	background-size:750px;
 	background-repeat: no-repeat;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
